feat: add secure endpoints from documents
